--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
       <div class="col-md-9 col-lg-8">
         <div class="detail-box">
           <h1>
-            Best Jewellery
-            <br> Collection
+          Please come to my
+            <br> marriage
           </h1>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
+           Date - Feb 31st 2050 
+           Please come with gifts or else don't come
+           Thank you
           </p>
           <div>
             <a href="" class="slider-link">
